tic tac toe with ai

--- a/Text-Based Browser/Formatted output/task.html
+++ b/Text-Based Browser/Formatted output/task.html
@@ -10,7 +10,7 @@
 
 <h2 style="text-align: center;">Objectives</h2>
 
-<p>Let all links in your browser be blue! Pay attention to the <a target="_blank" href="https://pypi.org/project/colorama/" rel="noopener noreferrer nofollow">Colorama</a> library. This library is already installed in the project, so you can use it. With this library, you can easily solve this task just after reading the documentation!</p>
+<p>Keep all the functionality from the previous stages, but before outputting the content of a web page, highlight all the links in it with the blue color! To do that, pay attention to the <a target="_blank" href="https://pypi.org/project/colorama/" rel="noopener noreferrer nofollow">Colorama</a> library. This library is already installed in the project, so you can use it. With this library, you can easily solve this task just after reading the documentation!</p>
 
 <h2 style="text-align: center;">Example</h2>
 
