Tictactoe with ai in one file

--- a/Text-Based Browser/Formatted output/task.html
+++ b/Text-Based Browser/Formatted output/task.html
@@ -1,20 +1,22 @@
 <h2 style="text-align: center;">Description</h2>
 
-<p>It’s not enough to just drop the tags. You should make your output “readable”. After all, we would like to have a user-friendly browser, right? At this stage, try to make your browser look more like a browser.</p>
+<p>It’s not enough just to drop the tags. You also need to make your output legible. After all, we would like to have a user-friendly browser, right? In this stage, try to make your browser look more like a browser.</p>
 
-<p>Almost every page contains links. Have you ever wondered why blue was chosen to highlight them?</p>
+<p>Almost every website contains links. Have you ever wondered why blue was chosen to highlight them?</p>
 
-<p>One of the reasons lies in the physiology of the human eye. Red and green are detected by the same cells in the eye, and one of the most common forms of colorblindness is red-green colorblindness. It affects 7% of men and only 0.4% of women, that’s still one person in 25 overall. But almost no one has a blue deficiency. Accordingly, nearly everyone can see blue, or, more accurately, almost everyone can distinguish blue as a color different from others.</p>
+<p>One of the reasons lies in the physiology of the human eye. Red and green are detected by the same cells in the eye, and one of the most common forms of colorblindness is red-green colorblindness. It affects 7% of men and only 0.4% of women, but combined that’s still an average of 1 in every 25 people overall. Nearly everyone can see blue, or, more accurately, almost everyone can distinguish blue as a color different from others.</p>
 
 <p>Also, blue is the darkest color that does not reduce the readability of the text.</p>
 
 <h2 style="text-align: center;">Objectives</h2>
 
-<p>Keep all the functionality from the previous stages, but before outputting the content of a web page, highlight all the links in it with the blue color! To do that, pay attention to the <a target="_blank" href="https://pypi.org/project/colorama/" rel="noopener noreferrer nofollow">Colorama</a> library. This library is already installed in the project, so you can use it. With this library, you can easily solve this task just after reading the documentation!</p>
+<p>Keep the functionality from the previous stages, but now make all links in your browser blue. The <a target="_blank" href="https://pypi.org/project/colorama/" rel="noopener noreferrer nofollow">Colorama</a> library can help you with this task. This library is already installed in the project so you can use it. With Colorama, all you need to do is read the documentation and you should be able to complete this task!</p>
 
 <h2 style="text-align: center;">Example</h2>
 
-<p>The greater-than symbol followed by space (<code class="java">&gt; </code>) represents the user input. Notice that it's not the part of the input.<br>
+<p>The greater-than symbol followed by a space (<code class="java">&gt; </code>) represents the user input. Note that it's not part of the input</p>
+
+<p><br>
 <samp>&gt; https://docs.python.org <br>
 <span style="color: #3366ff;">index</span><br>
 <span style="color: #3366ff;">modules   </span>    <br>
