--- a/Text-Based Browser/Parsing/task.html
+++ b/Text-Based Browser/Parsing/task.html
@@ -1,24 +1,24 @@
 <h2 style="text-align: center;">Description</h2>
 
-<p>Now it is important for us to bring the resulting "text" to a form that is understandable to the user.</p>
+<p>Now it is important for us to present the resulting "text" in a form that is convenient for the user.</p>
 
-<p>If you don’t know what HTML is, here's a short explanation. When working on the previous task you could see a lot of <code class="java">&lt;div&gt;</code>, <code class="java">&lt;script&gt;</code> or <code class="java">&lt;p&gt;</code> “words” on the displayed web page. These are called <strong>tags</strong>. Browsers need tags to know how exactly to show the page. For example, there could be headers that look different from the rest of the text. Also, there could be links; they could be blue, and the cursor could look like a pointing finger when it's on the link. To let the browser know where the links are, where an image should be and so on, tags are used.</p>
+<p>If you’re not familiar with HTML, here's a short explanation. When working on the previous task, you probably noticed a lot of <code class="java">&lt;div&gt;</code>, <code class="java">&lt;script&gt;</code>, or <code class="java">&lt;p&gt;</code> “words” on the displayed web page. These are called <strong>tags</strong>. Browsers need tags to know how exactly to show the page. For example, the website could include headers that look different from the rest of the text. Also, it could have links that are highlighted in blue, and the cursor could look like a pointing finger when it hovers over the link. Tags are used to help the browser identify where the links are, where an image should be, and so on.</p>
 
-<p>Tags are necessary for the browser but aren’t useful for users. Most tags are paired. For example: <code class="java">&lt;p&gt;Some text&lt;/p&gt;</code>, where <code class="java">&lt;p&gt;</code> is an opening tag and <code class="java">&lt;/p&gt;</code> is a closing tag. You need to show only “<code class="java">Some text</code>” without <code class="java">&lt;p&gt;</code> and <code class="java">&lt;/p&gt;</code> on a web page.</p>
+<p>Tags are necessary for the browser but aren’t useful for users. Most tags are paired. For example: <code class="java">&lt;p&gt;Some text&lt;/p&gt;</code>, where <code class="java">&lt;p&gt;</code> is an opening tag and <code class="java">&lt;/p&gt;</code> is a closing tag. Your browser should only display “<code class="java">Some text</code>”, without <code class="java">&lt;p&gt;</code> and <code class="java">&lt;/p&gt;</code>.</p>
 
 <p>Each tag has its own purpose: <code class="java">&lt;p&gt;</code> for text, <code class="java">&lt;h1&gt; &lt;h2&gt; … &lt;h6&gt;</code> for headers, <code class="java">&lt;a&gt;</code> for links, <code class="java">&lt;ul&gt; &lt;ol&gt; &lt;li&gt;</code> for lists.</p>
 
-<p> </p>
-
 <h2 style="text-align: center;">Objectives</h2>
 
-<p>At this stage, instead of outputting and saving to the file raw HTML, you need to parse the web page, cut all content outside of the HTML tags, and output and save to the file what remains. Strip the text of all HTML tags: no more <code class="java">&lt;div&gt;, &lt;script&gt;, &lt;p&gt;</code> and so on, just a pure text that everybody can read easily! You need to show only the content of a limited list of tags (<code class="java">&lt;p&gt;</code>, headers, <code class="java">&lt;a&gt;</code> and <code class="java">&lt;ul&gt;</code>, <code class="java">&lt;ol&gt;</code>, <code class="java">&lt;li&gt;</code>) without the tags themselves.</p>
+<p>In this stage, you need to extract and output the content between these tags. No more <code class="java">&lt;div&gt;</code>, <code class="java">&lt;script&gt;</code>, <code class="java">&lt;p&gt;</code> and so on, just text! Your browser should display only the content of a limited list of tags (<code class="java">&lt;p&gt;</code>, headers, <code class="java">&lt;a&gt;</code> and <code class="java">&lt;ul&gt;</code>, <code class="java">&lt;ol&gt;</code>, <code class="java">&lt;li&gt;</code>) without showing the tags themselves.</p>
 
-<p>Use <code class="java">beautifulsoup4</code> library for solving this, it is installed in your project already. To pass the test, it's enough to simply <a target="_blank" href="https://www.crummy.com/software/BeautifulSoup/bs4/doc/" rel="noopener noreferrer nofollow">find</a> the function allowing us to extract the human-readable text from a web page. However, feel free to get curious and browse through some more information about <a target="_blank" href="https://www.dataquest.io/blog/web-scraping-tutorial-python/" rel="noopener noreferrer nofollow">parsing</a>! </p>
+<p>Use the library <code class="java">beautifulsoup4</code> to make these changes. This library is already installed in your project.</p>
+
+<p>To pass the tests, simply <a target="_blank" href="https://www.crummy.com/software/BeautifulSoup/bs4/doc/" rel="noopener noreferrer nofollow">find the function</a> allowing us to extract the human-readable text from a web page.<strong> </strong>If you’re curious, feel free to browse through some more information about <a target="_blank" href="https://www.dataquest.io/blog/web-scraping-tutorial-python/" rel="noopener noreferrer nofollow">parsing</a>!</p>
 
 <h2 style="text-align: center;">Example</h2>
 
-<p>The greater-than symbol followed by space (<code class="java">&gt; </code>) represents the user input. Notice that it's not the part of the input.</p>
+<p>The greater-than symbol followed by a space (<code class="java">&gt; </code>) represents the user input. Note that it's not part of the input.</p>
 
 <pre><code class="language-no-highlight">&gt; python browser.py dir-for-files
 &gt; docs.python.org
