--- a/Text-Based Browser/Tabs/task.html
+++ b/Text-Based Browser/Tabs/task.html
@@ -1,24 +1,24 @@
 <h2 style="text-align: center;">Description</h2>
 
-<p>Let's make our browser store web pages in a file and show them if the user types a shortened request (for example, wikipedia instead of <a target="_blank" href="https://www.wikipedia.org" rel="noopener noreferrer nofollow">wikipedia.org</a>). You can store each page as a separate file or find another way to do this. But your program should accept one command line argument which is a directory to store the files, and your web pages should be saved inside this directory.</p>
+<p>Let's allow our browser to store web pages in a file and show them if the user types a shortened request (for example, <code class="java">wikipedia</code> instead of <a target="_blank" href="https://www.wikipedia.org/" rel="noopener noreferrer nofollow">wikipedia.org</a>). You can store each page as a separate file or find another way to do this. Your program should accept one command-line argument, which is a directory to store the files, and the web pages should be saved inside this directory.</p>
 
 <h2 style="text-align: center;">Objectives</h2>
 
-<p>At this stage, your program should: </p>
+<p>In this stage, your program should: </p>
 
 <ol>
 	<li>Accept a command-line argument which is a directory for saved tabs. For example, if the argument is <code class="java">dir</code>, then you need to create a folder with the name <code class="java">dir</code> and save all the web pages that the user downloads in this folder.</li>
-	<li>Read the user's input specifying URL. Check if this URL is valid: firstly, it should contain at least one dot, for example, <code class="java">bloomberg.com</code> (while <code class="java">bloombergcom</code> is invalid). If the URL is incorrect, the browser should output an error message (it should contain the word <code class="java">error</code>) and wait for another URL.</li>
-	<li>Secondly, in this task, your program can only access two web pages: <code class="java">bloomberg.com</code> and <code class="java">nytimes.com</code>. If the URL isn't any of these links, your program should output an error message too. </li>
-	<li>If the URL is valid, print the content of the web page and save it to a file in the aforementioned directory (you have two predefined variables with the content of the web pages that you should save: <code class="java">bloomberg_com</code> and <code class="java">nytimes_com</code>). The name of the file should correspond to the web page name. To get the name of the file, remove the last dot and everything that comes after it. This way, the file for the page <code class="java">bloomberg.com</code> will be named <code class="java">bloomberg</code>.</li>
+	<li>Check if the user has entered a valid URL. It must contain at least one dot, for example, <code class="java">bloomberg.com</code>. If the URL is incorrect, the browser should output an error message (it should contain the word error) and wait for another URL.</li>
+	<li>In this task, your program can only access two web pages: <code class="java">bloomberg.com</code> and <code class="java">nytimes.com</code>. If the URL isn't either of these two, your program should output an error message. </li>
+	<li>If the URL is valid, print the content of the web page and save it to a file in the aforementioned directory. You have two predefined variables with the content of the web pages that you should save: <code class="java">bloomberg_com</code> and <code class="java">nytimes_com</code>. The name of the file should correspond to the name of the web page. To get the name of the file, remove the last dot and everything that comes after it. This way, the file for the page <code class="java">bloomberg.com</code> will be named <code class="java">bloomberg</code>.</li>
 	<li>Read the next input. If this input is the string <code class="java">exit</code>, the program should stop running. If not, check if the string corresponds to the name of any file with a web page you saved before. If it does, print the content of this file. If it doesn't, check if the string is a new valid URL. If it is, repeat step 4. If it isn't, output an error message. </li>
 </ol>
 
-<p><span style="font-size: inherit; font-weight: inherit;">Check out a tutorial to learn how to </span><a target="_blank" href="https://www.techbeamers.com/read-write-file-in-python/" rel="noopener noreferrer nofollow" style="font-size: inherit; font-weight: inherit;">work with files</a><span style="font-size: inherit; font-weight: inherit;"> and </span><a target="_blank" href="https://thispointer.com/how-to-create-a-directory-in-python/" rel="noopener noreferrer nofollow" style="font-size: inherit; font-weight: inherit;">create folders</a><span style="font-size: inherit; font-weight: inherit;"> in Python.</span></p>
+<p>Check out a few tutorials to learn how to <a target="_blank" href="https://www.techbeamers.com/read-write-file-in-python/" rel="noopener noreferrer nofollow" style="font-size: inherit; font-weight: inherit;">work with files</a> and <a target="_blank" href="https://thispointer.com/how-to-create-a-directory-in-python/" rel="noopener noreferrer nofollow" style="font-size: inherit; font-weight: inherit;">create folders</a> in Python.</p>
 
 <h2 style="text-align: center;">Example</h2>
 
-<p>The greater-than symbol followed by space (<code class="java">&gt; </code>) represents the user input. Notice that it's not the part of the input.</p>
+<p>The greater-than symbol followed by a space (<code class="java">&gt; </code>) represents the user input. Note that it's not part of the input.</p>
 
 <pre><code class="language-no-highlight">&gt; python browser.py dir-for-files
 &gt; bloomberg.com
